--- a/src/app/modules/engineers/components/profile-details/profile-details.component.scss
+++ b/src/app/modules/engineers/components/profile-details/profile-details.component.scss
@@ -11,6 +11,12 @@
   }
 }
 
+.card-title-header{
+  width: 75%;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+}
+
 .roles-header {
   font-size: 14px;
   font-weight: 500;
@@ -61,6 +67,18 @@ ul.list-unstyled li a svg{
     border-radius: none;
     border:none;
     box-shadow: none;
+  }
+
+  .info .d-flex{
+    flex-direction: column;
+    .card-title-header{
+      width: 100%;
+    }
+  }
+
+  .btns{
+    text-align: center;
+    margin: 30px 0;
   }
 
   .private-info{
